<resources>
    <string name="app_name">test</string>

    <string name="put_id">아이디</string>
    <string name="put_pw">비밀번호</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>

    <string name="signup_name">이름</string>
    <string name="signup_id">아이디</string>
    <string name="check_id">아이디 확인</string>
    <string name="signup_pw">비밀번호</string>
    <string name="signup_tel">연락처</string>
    <string name="cancel_signup">취소</string>
    <string name="check_signup">확인</string>
    <string name="signup_back">뒤로가기</string>


</resources>