<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/signup_id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextPW"
        app:layout_constraintEnd_toStartOf="@+id/idBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/signup_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextTel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPW" />

    <EditText
        android:id="@+id/editTextTel"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/signup_tel"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/checkBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextPW"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/signup_pw"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextID" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="258dp"
        android:layout_height="188dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main" />

    <ImageButton
        android:id="@+id/checkBtn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/check_signup"
        android:padding="0sp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTel"
        app:srcCompat="@drawable/check" />

    <ImageButton
        android:id="@+id/cancelBtn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/cancel_signup"
        android:padding="0sp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBtn"
        app:layout_constraintTop_toBottomOf="@+id/editTextTel"
        app:layout_constraintVertical_bias="0.693"
        app:srcCompat="@drawable/cancel" />

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/signup"
        android:padding="0sp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageButton
        android:id="@+id/idBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/check_id"
        android:padding="0sp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/editTextPW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextID"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.424"
        app:srcCompat="@drawable/chck" />

</androidx.constraintlayout.widget.ConstraintLayout>